# cv-data

./: README.md  ReportAndCreative.md  pyproject.toml
psd_transfer/: .gitignore  README.md  aws_credentials.sample  requirements.txt  select.Dockerfile
psd_transfer/src/: aws_client.py  select_transfer.py  util.py
query/image/facebook/: creative_report.sql  facebook_age_databank.sql  facebook_age_xone_optout.sql  facebook_gender_databank.sql  facebook_gender_xone_optout.sql  hdy_report.sql
query/image/google/: adwords_age_databank.sql  adwords_age_xone_optout.sql  adwords_gender_databank.sql  adwords_gender_xone_optout.sql  creative_report.sql  googleads_age_databank.sql  googleads_age_xone_optout.sql  googleads_gender_databank.sql  googleads_gender_xone_optout.sql  hdy_report.sql
query/image/line/: creative_report.sql  hdy_report.sql  line_age_databank.sql  line_age_xone_optout.sql  line_gender_databank.sql  line_gender_xone_optout.sql
query/image/x/: creative_report.sql  hdy_report.sql  twitter_age_databank_20220123_20240630.sql  twitter_age_xone_optout_20220123_20240630.sql  twitter_gender_databank_20210701_20240630.sql  twitter_gender_xone_optout_20210701_20240630.sql
query/youtube_crawl/: video_id.sql
src/: collect_csv.py  concat_with_priority.py  download_aws_file.py  download_gcs_file.py  dowonload_gcs_file.py  overwrite_sizes.py
youtube_crawl/: .gitignore  README.md  build_and_push.sh  upload_cookies.sh
youtube_crawl/lambda/: Dockerfile  handler.py
youtube_crawl/utils/: convert_csv2json.py  get_cookies.py  run_lambda.py
(+10 files in other folders)
