[tool.poetry]
name = "cv-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
dask = "^2024.12.0"
boto3 = "^1.35.78"
loguru = "^0.7.3"
google-cloud-storage = "^2.19.0"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
